--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         <h2 class="container-title">経歴</h2>
         <table>
           <tbody>
-            <tr><th>20XX年</th><td>○×株式会社入社</td></tr>
-            <tr><th>20XX年</th><td>○×株式会社退社</td></tr>
-            <tr><th>20XX年</th><td>△□株式会社入社</td></tr>
+            <tr><th>2016年</th><td>日本システムワープ株式会社入社</td></tr>
+            <tr><th>2019年</th><td>日本システムワープ株式会社退社</td></tr>
+            <tr><th>2019年</th><td>株式会社SENGOKU入社</td></tr>
+            <tr><th>2020年</th><td>株式会社SENGOKU退社</td></tr>
           </tbody>
         </table>
       </div>
@@ -93,8 +94,6 @@
             <textarea cols="100" rows="10" placeholder="内容" name="comment"></textarea><br />
             <div class="button">
               <input type="submit" name="submit" value="話を聞く！">
-              <input type="submit" name="submit" value="スカウトする！">
-              <input type="submit" name="submit" value="雇う！">
             </div>
           </form>
         </div>
